--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -6,6 +6,8 @@ library(gridExtra)
 library(tidyverse)
 require(grid) #  grid.bezier()
 
+options(pillar.sigfig = 3) # set number of digits to display in output to match writing
+
 max_count <- function(dist) {
   max(ggplot_build(dist)$data[[1]]$count)
 }
@@ -37,7 +39,7 @@ By the end of the chapter, students will be able to:
 * Describe real-world examples of questions that can be answered with the statistical inference.
 * Define common population parameters (e.g. mean, proportion, standard deviation) that are often estimated using sampled data, and estimate these from a sample.
 * Define the following statistical sampling terms (population, sample, population parameter, point estimate, sampling distribution).
-* Explain the difference between a population parameter and sample point estimate.
+* Explain the difference between a population parameter and a sample point estimate.
 * Use R to draw random samples from a finite population.
 * Use R to create a sampling distribution from a finite population.
 * Describe how sample size influences the sampling distribution.
@@ -64,7 +66,7 @@ directly computing population parameters is often time-consuming and costly, and
 
 A more practical approach would be to collect measurements for a **sample**: a subset of
 individuals collected from the population. We can then compute a **sample estimate**&mdash;a numerical
-characteristic of the sample&mdash;that estimates the population parameter. For example, suppose we randomly selected 10 undergraduate students across North America (the sample) and computed the proportion of those
+characteristic of the sample&mdash;that estimates the population parameter. For example, suppose we randomly selected ten undergraduate students across North America (the sample) and computed the proportion of those
 students who own an iPhone (the sample estimate). In that case, we might suspect that that proportion is a reasonable estimate of the proportion of students who own an iPhone in the entire population. 
 
 ```{r 11-population-vs-sample, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Population versus sample", fig.retina = 2}
@@ -103,7 +105,7 @@ knitr::include_graphics("https://upload.wikimedia.org/wikipedia/commons/7/76/Van
 ```{r}
 airbnb
 ```
-Suppose the city of Vancouver wants to know how many Airbnb places are rented out as entire homes and apartments rather than as private or shared rooms. Therefore they may want to estimate the true proportion of all Airbnb listings where the "type of place" is listed as "entire home or apartment." Of course, we usually do not have access to the true population, but here let's imagine (for learning purposes) that our data set represents the population of all Airbnb rental listings in Vancouver, Canada. We can find the proportion of listings where `room_type == "Entire home/apt"`.
+Suppose the city of Vancouver wants to know how many Airbnb places are listed as entire homes and apartments (rather than as private or shared rooms). Therefore they may want to estimate the true proportion of all Airbnb listings where the "type of place" is listed as "entire home or apartment." Of course, we usually do not have access to the true population, but here let's imagine (for learning purposes) that our data set represents the population of all Airbnb rental listings in Vancouver, Canada. We can find the proportion of listings where `room_type == "Entire home/apt"`.
 
 ```{r 11-example-proportions2, echo = TRUE, message = FALSE, warning = FALSE }
 library(tidyverse)
@@ -125,7 +127,7 @@ population_proportion <- airbnb %>%
   pull()
 ```
 
-From our data, we can see that the proportion of `Entire home/apt` listings in the data set is `r round(population_proportion,2)`. This value, `r round(population_proportion,2)`, is the *population parameter*. Remember, this parameter value is usually unknown in real data analysis problems.
+From our data, we can see that the proportion of `Entire home/apt` listings in the data set is `r round(population_proportion,3)`. This value, `r round(population_proportion,3)`, is the *population parameter*. Remember, this parameter value is usually unknown in real data analysis problems.
 
 What would happen if we were to randomly select 40 listings and count the number of entire home/apartment listings (*i.e.,* take a random sample of size 40 from our population)? Let's use R to simulate this using our `airbnb` population. We can do this using the `rep_sample_n` function from the `infer` package. The arguments of `rep_sample_n` are (1) the data frame (or tibble) to sample from, and (2) the size of the sample to take.
 
@@ -157,7 +159,7 @@ airbnb_sample_2
 ```
 
 Notice that we get a different value for our estimate this time. The
-proportion of entire home/apartment listings in this sample is `r round(airbnb_sample_2$prop, 2)`. 
+proportion of entire home/apartment listings in this sample is `r round(airbnb_sample_2$prop, 3)`. 
 If we were to do this again, another random sample could also give a
 different result. Estimates vary from sample to sample 
 due to **sampling variability**. 
@@ -198,7 +200,7 @@ sampling_distribution <- ggplot(sample_estimates, aes(x = sample_proportion)) +
 sampling_distribution
 ```
 
-The sampling distribution in figure \@ref(fig:11-example-proportions7) appears to be bell-shaped with one peak. It is
+The sampling distribution in Figure \@ref(fig:11-example-proportions7) appears to be bell-shaped with one peak. It is
 centered around `r round(mean(sample_estimates$sample_proportion),1)` and the
 sample proportions range from about `r round(min(sample_estimates$sample_proportion), 1)` to 
 about `r round(max(sample_estimates$sample_proportion), 1)`. In fact, we can calculate
@@ -208,9 +210,9 @@ the mean of the sample proportions.
 sample_estimates %>%
   summarise(mean = mean(sample_proportion))
 ```
-We notice that the sample proportions are centred around the population proportion value, `r round(mean(sample_estimates$sample_proportion), 2)`! In general, the mean of the distribution of $\hat{p}$ should be equal to $p$, which is good because that means the sample proportion is neither an overestimate nor an underestimate of the population proportion.
+We notice that the sample proportions are centred around the population proportion value, `r round(mean(sample_estimates$sample_proportion), 3)`! In general, the mean of the distribution of $\hat{p}$ should be equal to $p$, which is good because that means the sample proportion is neither an overestimate nor an underestimate of the population proportion.
 
-So what can we learn from this sampling distribution? This distribution tells us what we might expect from proportions from samples of size $40$ when our population proportion is `r round(population_proportion,2)`. In practice, we usually don't know the proportion of our population, but if we can use what we know about the sampling distribution, we can use it to make inferences about our population when we only have a single sample. 
+So what can we learn from this sampling distribution? This distribution tells us what we might expect from proportions from samples of size $40$ when our population proportion is `r round(population_proportion,3)`. In practice, we usually don't know the proportion of our population, but if we can use what we know about the sampling distribution, we can use it to make inferences about our population when we only have a single sample. 
 
 <!--- > **Note:** If random samples of size $n$ are taken from a population, $\hat{p}$ will be approximately Normal with mean $p$ and standard deviation $\sqrt{\frac{p(1-p)}{n}}$ as long as the sample size $n$ is large enough such that $np$ and $n(1 - p)$ are at least 10, where $p$ is the population proportion, $\hat{p}$ is the sample proportion and $n$ is the sample size. 
 --->
@@ -218,16 +220,19 @@ So what can we learn from this sampling distribution? This distribution tells us
 ### Sampling distributions for means 
 
 In the previous section, our variable of interest&mdash; `room_type` &mdash;was
-*categorical*, and the population parameter of interest was the proportion of listings where the room type was "entire home/apt". As mentioned in the introduction to this chapter, there are many choices of the population parameter for each type of observed variable. What if we wanted to infer something about a population of *quantitative* variables instead? For instance, a traveller visiting Vancouver, BC, may wish to know about the prices of staying somewhere using Airbnb. Particularly, they might be interested in estimating the population mean price per night of Airbnb listings in Vancouver, BC. This section will study the case where we are interested in the population mean of a quantitative variable.
+*categorical*, and the population parameter of interest was the proportion of listings where the room type was "entire home/apt". As mentioned in the chapter introduction, there are many choices of the population parameter for each type of observed variable. What if we wanted to infer something about a population of *quantitative* variables instead? For instance, a traveller visiting Vancouver, BC, may wish to know about the prices of staying somewhere using Airbnb. Particularly, they might be interested in estimating the population mean price per night of Airbnb listings in Vancouver, BC. This section will study the case where we are interested in the population mean of a quantitative variable.
 
 We can visualize the population distribution of the price per night with a histogram. 
+```{r, echo = F}
+options(pillar.sigfig = 5)
+```
 ```{r 11-example-means2, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Population distribution of price per night ($) for all Airbnb listings in Vancouver, Canada", out.width = "60%"}
 population_distribution <- ggplot(airbnb, aes(x = price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Price per night ($)")
 population_distribution
 ```
-From figure \@ref(fig:11-example-means2), we see that the distribution has one peak and is skewed (not symmetric) &mdash;most of the listings
+From Figure \@ref(fig:11-example-means2), we see that the population distribution has one peak and is skewed (not symmetric) &mdash;most of the listings
 are less than \$250 per night, but a small proportion of listings cost more
 than that, creating a long tail on the histogram's right side. 
 
@@ -248,7 +253,7 @@ one_sample <- airbnb %>%
   rep_sample_n(40)
 ```
 
-We can create a histogram to visualize the distribution of observations in the sample (figure \@ref(fig:11-example-means-sample-hist)), and calculate the mean of our sample. This number is a **point estimate** for the mean of the full population.
+We can create a histogram to visualize the distribution of observations in the sample (Figure \@ref(fig:11-example-means-sample-hist)), and calculate the mean of our sample. This number is a **point estimate** for the mean of the full population.
 ```{r 11-example-means-sample-hist, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of price per night ($) for sample of 40 Airbnb listings", out.width = "60%"}
 sample_distribution <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
@@ -264,9 +269,7 @@ estimate for the mean is \$`r round(estimates$sample_mean, 2)`. So we can see ou
 about `r round(100*abs(estimates$sample_mean - population_parameters$pop_mean)/population_parameters$pop_mean, 1)`% off.
 Note that we usually cannot compute the estimate's accuracy in practice since we do not have access to the population parameter; if we did, we wouldn't need to estimate it!
 
-Also, recall from the previous section that the point estimate can vary; if 
-we took another random sample from the population, then the value of our estimate may change.
-So then did we just get lucky with our point estimate above?
+Also, recall from the previous section that the point estimate can vary; if we took another random sample from the population, our estimate's value might change. So then, did we just get lucky with our point estimate above?
 How much does our estimate vary across different samples of size 40 in this example? Again, since we have access to the population,
 we can take many samples and plot the **sampling distribution** of sample means for samples of size 40 to get a sense
 for this variation. In this case, we'll use 15,000 samples of size 40.
@@ -290,7 +293,7 @@ sampling_distribution_40
 ```
 
 
-In figure \@ref(fig:11-example-means4), the sampling distribution of the mean has one peak and is
+In Figure \@ref(fig:11-example-means4), the sampling distribution of the mean has one peak and is
 bell-shaped. Most of the estimates are between 
 about  \$`r round(quantile(sample_estimates$sample_mean)[2], -1)` and 
 \$`r round(quantile(sample_estimates$sample_mean)[4], -1)`; but there are
@@ -300,7 +303,7 @@ when we estimated the population mean
 with only `r round(100*abs(estimates$sample_mean - population_parameters$pop_mean)/population_parameters$pop_mean, 1)`% error.
 Let's visualize the population
 distribution, distribution of the sample, and the sampling distribution on one 
-plot to compare them in figure \@ref(fig:11-example-means5).
+plot to compare them in Figure \@ref(fig:11-example-means5).
 <!---
 ```{r 11-example-means4.5}
 sample_estimates %>%
@@ -326,8 +329,7 @@ nrow = 3
 
 Given that there is quite a bit of variation in the sampling distribution of the sample mean&mdash;i.e., 
 the point estimate that we obtain is not very reliable&mdash;is there any way to improve the estimate?
-One way to improve a point estimate is to take a *larger* sample. To illustrate what effect this has,
-we will take many samples of size 20, 50, 100, and 500, and plot the sampling distribution of the sample mean.
+One way to improve a point estimate is to take a *larger* sample. To illustrate what effect this has, we will take many samples of size 20, 50, 100, and 500, and plot the sampling distribution of the sample mean.
 
 ```{r 11-example-means6, echo = FALSE, message = FALSE, warning = FALSE}
 ## Sampling n = 20, 50, 100, 500
@@ -382,7 +384,7 @@ annotated_sampling_dist_20 <- sampling_distribution_20 +
   ggtitle("n = 20") +
   annotate("text",
     x = max_x(sampling_distribution_20), y = max_count(sampling_distribution_20), hjust = 1, vjust = 1,
-    label = paste("mean = ", round(mean(sample_estimates$sample_mean), 1))
+    label = paste("mean = ", round(mean(sample_estimates$sample_mean), 2))
   )
 #+
 #    annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_20), hjust = 1, vjust = 3,
@@ -393,7 +395,7 @@ annotated_sampling_dist_50 <- sampling_distribution_50 +
   ## x limits set the same as n = 20 graph, y is this graph
   annotate("text",
     x = max_x(sampling_distribution_20), y = max_count(sampling_distribution_50), hjust = 1, vjust = 1,
-    label = paste("mean = ", round(mean(sample_estimates_50$sample_mean), 1))
+    label = paste("mean = ", round(mean(sample_estimates_50$sample_mean), 2))
   ) #+
 # annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_50), hjust = 1, vjust = 3,
 #                 label = paste("sd = ", round(sd(sample_estimates_50$sample_mean), 1)))
@@ -402,7 +404,7 @@ annotated_sampling_dist_100 <- sampling_distribution_100 +
   geom_vline(xintercept = mean(sample_estimates_100$sample_mean), col = "red") +
   annotate("text",
     x = max_x(sampling_distribution_20), y = max_count(sampling_distribution_100), hjust = 1, vjust = 1,
-    label = paste("mean = ", round(mean(sample_estimates_100$sample_mean), 1))
+    label = paste("mean = ", round(mean(sample_estimates_100$sample_mean), 2))
   ) #+
 #    annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_100), hjust = 1, vjust = 3,
 #               label = paste("sd = ", round(sd(sample_estimates_100$sample_mean), 1)))
@@ -411,7 +413,7 @@ annotated_sampling_dist_500 <- sampling_distribution_500 +
   geom_vline(xintercept = mean(sample_estimates_500$sample_mean), col = "red") +
   annotate("text",
     x = max_x(sampling_distribution_20), y = max_count(sampling_distribution_500), hjust = 1, vjust = 1,
-    label = paste("mean = ", round(mean(sample_estimates_500$sample_mean), 1))
+    label = paste("mean = ", round(mean(sample_estimates_500$sample_mean), 2))
   ) #+
 #    annotate("text", x =  max_x(sampling_distribution_20), y = max_count(sampling_distribution_500), hjust = 1, vjust = 3,
 #               label = paste("sd = ", round(sd(sample_estimates_500$sample_mean), 1)))
@@ -424,7 +426,7 @@ grid.arrange(annotated_sampling_dist_20,
 )
 ```
 
-Based on the visualization in figure \@ref(fig:11-example-means7), two points about the sample mean become clear.
+Based on the visualization in Figure \@ref(fig:11-example-means7), two points about the sample mean become clear.
 First, the
 mean of the sample mean (across samples) is equal to the population mean.
 Second, increasing the size of the sample
@@ -440,7 +442,7 @@ in a more reliable point estimate of the population parameter.
 ### Summary
 1. A *point estimate* is a single value computed using a sample from a population (e.g. a mean or proportion)
 2. The *sampling distribution* of an estimate is the distribution of the estimate for all possible samples of a fixed size from the same population.
-3. The sample means and proportions calculated from samples are centered around the population mean and proportion, respectively.
+3. The sample means and proportions calculated from samples are centred around the population mean and proportion, respectively.
 4. The spread of the sampling distribution is related to the sample size. As the sample size increases, the spread of the sampling distribution decreases. 
 5. The shape of the sampling distribution is usually bell-shaped with one peak and centred at the population mean or proportion.
 
@@ -453,14 +455,13 @@ Usually, we don't have access to the population data, so we cannot construct the
 
 We saw in the previous section that we could compute a **point estimate** of a population
 parameter using a sample of observations from the population. And since we had access to the
-population, we could evaluate how accurate the estimate was, and even get a sense for how much
+population, we could evaluate how accurate the estimate was, and even get a sense of how much
 the estimate would vary for different samples from the population. 
-But in real data analysis settings, we usually have *just one sample* from our population,
-and do not have access to the population itself. So how do we get a sense for how
+But in real data analysis settings, we usually have *just one sample* from our population and do not have access to the population itself. So how do we get a sense of how
 variable our point estimate is when we only have one sample to work with?
-In this section, we will discuss **interval estimation** and construct **confidence intervals** using just a single sample from a population. A confidence interval is a range of plausible values for our population parameter. 
+This section will discuss **interval estimation** and construct **confidence intervals** using just a single sample from a population. A confidence interval is a range of plausible values for our population parameter. 
 
-Here is the key idea. First, if you take a big enough sample, it *looks like* the population. Notice the histograms' shapes for samples of different sizes taken from the population in figure \@ref(fig:11-example-bootstrapping0). We see that for a large enough sample, the sample's distribution looks like that of the population.
+Here is the key idea. First, if you take a big enough sample, it *looks like* the population. Notice the histograms' shapes for samples of different sizes taken from the population in Figure \@ref(fig:11-example-bootstrapping0). We see that the sample’s distribution looks like that of the population for a large enough sample.
 
 
 ```{r 11-example-bootstrapping0, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparision of samples of different sizes from the population"}
@@ -514,7 +515,7 @@ grid.arrange(sample_distribution_10 + xlim(min(airbnb$price), 600),
 ```
 
 In the previous section, we took many samples of the same size *from our population* to get
-a sense for the variability of a sample estimate. But if our sample is big enough that it looks like our population,
+a sense of the variability of a sample estimate. But if our sample is big enough that it looks like our population,
 we can pretend that our sample *is* the population, and take more samples (with replacement) of the same size
 from it instead! This very clever technique is called **the bootstrap**.
 Note that by taking many samples from our single, observed sample, we do not obtain the true sampling distribution,
@@ -538,7 +539,7 @@ For a sample of size $n$, the process we will go through is as follows:
 knitr::include_graphics("img/intro-bootstrap.jpeg")
 ```
 ### Bootstrapping in R 
-Let’s continue working with our Airbnb data. Once again, let’s say we are interested in estimating the population mean price per night of all Airbnb listings in Vancouver, Canada, using the single sample we collected of size 40. Recall our point estimate was \$`r round(estimates$sample_mean, 2)`, and the distribution of the sample is displayed in figure \@ref(fig:11-bootstrapping1).
+Let’s continue working with our Airbnb data. Once again, let’s say we are interested in estimating the population mean price per night of all Airbnb listings in Vancouver, Canada, using the single sample we collected of size 40. Recall our point estimate was \$`r round(estimates$sample_mean, 2)`, and the distribution of the sample is displayed in Figure \@ref(fig:11-bootstrapping1).
 
 ```{r, echo = F, message = F, warning = F}
 one_sample <- one_sample %>% 
@@ -576,7 +577,7 @@ boot1_dist
 summarise(boot1, mean = mean(price))
 ```
 
-Notice in figure \@ref(fig:11-bootstrapping3) that our bootstrap distribution has a similar shape to the original
+Notice in Figure \@ref(fig:11-bootstrapping3) that our bootstrap distribution has a similar shape to the original
 sample distribution. Though the shapes of the distributions are similar, they
 are not identical. You'll also notice that the original sample mean and the
 bootstrap sample mean differ. How might that happen? Remember that we are
@@ -607,7 +608,7 @@ ggplot(six_bootstrap_samples, aes(price)) +
   facet_wrap(~replicate)
 ```
 
-We see in figure \@ref(fig:11-bootstrapping-six-bootstrap-samples) how the bootstrap samples differ. We can also calculate the sample mean for each of these six replicates. 
+We see in Figure \@ref(fig:11-bootstrapping-six-bootstrap-samples) how the bootstrap samples differ. We can also calculate the sample mean for each of these six replicates. 
 ```{r 11-bootstrapping-six-bootstrap-samples-means, echo = TRUE, message = FALSE, warning = FALSE}
 six_bootstrap_samples %>%
   group_by(replicate) %>%
@@ -665,7 +666,7 @@ grid.arrange(sampling_dist + xlim(min_x(sampling_dist), max_x(sampling_dist)) + 
 )
 ```
 
-There are two essential points that we can take away from figure \@ref(fig:11-bootstrapping6). First, the shape and spread of the true sampling distribution and the bootstrap distribution are similar; the bootstrap distribution lets us get a sense of the point estimate's variability. The second important point is that the means of these two distributions are different. The sampling distribution is centred at \$`r round(mean(airbnb$price),2)`, the population mean value. However, the bootstrap distribution is centred at the original sample's mean price per night, \$`r round(mean(boot15000_means$mean), 2)`. Because we are resampling from the original sample repeatedly, we see that the bootstrap distribution is centred at the original sample's mean value (unlike the sampling distribution of the sample mean, which is centred at the population parameter value). Figure \@ref(fig:11-bootstrapping7) summarizes the bootstrapping process.
+There are two essential points that we can take away from Figure \@ref(fig:11-bootstrapping6). First, the shape and spread of the true sampling distribution and the bootstrap distribution are similar; the bootstrap distribution lets us get a sense of the point estimate's variability. The second important point is that the means of these two distributions are different. The sampling distribution is centred at \$`r round(mean(airbnb$price),2)`, the population mean value. However, the bootstrap distribution is centred at the original sample's mean price per night, \$`r round(mean(boot15000_means$mean), 2)`. Because we are resampling from the original sample repeatedly, we see that the bootstrap distribution is centred at the original sample's mean value (unlike the sampling distribution of the sample mean, which is centred at the population parameter value). Figure \@ref(fig:11-bootstrapping7) summarizes the bootstrapping process.
 
 The idea here is that we can use this distribution of bootstrap sample means to approximate the sampling distribution of the sample means when we only have one sample. Since the bootstrap distribution pretty well approximates the sampling distribution spread, we can use the bootstrap spread to help us develop a plausible range for our population parameter along with our estimate!
 
@@ -805,7 +806,7 @@ grid.text("many means...",
 
 ### Using the bootstrap to calculate a plausible range  
 
-Now that we have constructed our bootstrap distribution let's use it to create an approximate bootstrap confidence interval, a range of plausible values for the population mean. We will build a 95\% percentile bootstrap confidence interval and find the range of values that cover the middle 95\% of the bootstrap distribution. A 95\% confidence interval means that if we were to repeat the sampling process and calculate 95\% confidence intervals each time and repeat this process many times, then 95\% of the intervals would capture the population parameter's value. Note that there's nothing particularly special about 95\%, we could have used other confidence levels, such as 90\% or 99\%. There is a balance between our level of confidence and precision. A higher confidence level corresponds to a wider range of the interval, and a lower confidence level corresponds to a narrower range. Therefore the level we choose is based on what chance we are willing to take of being wrong based on the implications of being wrong for our application. In general, we choose confidence levels to be comfortable with our level of uncertainty, but not so strict that the interval is unhelpful. For instance, if our decision impacts human life and the implications of being wrong are deadly, we may want to be very confident and choose a higher confidence level.
+Now that we have constructed our bootstrap distribution, let's use it to create an approximate bootstrap confidence interval, a range of plausible values for the population mean. We will build a 95\% percentile bootstrap confidence interval and find the range of values that cover the middle 95\% of the bootstrap distribution. A 95\% confidence interval means that if we were to repeat the sampling process and calculate 95\% confidence intervals each time and repeat this process many times, then 95\% of the intervals would capture the population parameter's value. Note that there's nothing particularly special about 95\%, we could have used other confidence levels, such as 90\% or 99\%. There is a balance between our level of confidence and precision. A higher confidence level corresponds to a wider range of the interval, and a lower confidence level corresponds to a narrower range. Therefore the level we choose is based on what chance we are willing to take of being wrong based on the implications of being wrong for our application. In general, we choose confidence levels to be comfortable with our level of uncertainty, but not so strict that the interval is unhelpful. For instance, if our decision impacts human life and the implications of being wrong are deadly, we may want to be very confident and choose a higher confidence level.
 
 To calculate our 95\% percentile bootstrap confidence interval, we will do the following:
 
@@ -823,7 +824,7 @@ bounds <- boot15000_means %>%
 bounds
 ```
 
-Our interval, \$`r round(bounds[1],2) ` to \$`r round(bounds[2],2)`, captures the middle 95\% of the sample mean prices in the bootstrap distribution. We can visualize the interval on our distribution in figure \@ref(fig:11-bootstrapping9). 
+Our interval, \$`r round(bounds[1],2) ` to \$`r round(bounds[2],2)`, captures the middle 95\% of the sample mean prices in the bootstrap distribution. We can visualize the interval on our distribution in Figure \@ref(fig:11-bootstrapping9). 
 
 ```{r 11-bootstrapping9, echo = F, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means with percentile lower and upper bounds", out.width = "70%"}
 boot_est_dist +
