--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -41,7 +41,7 @@ By the end of the chapter, students will be able to:
 - (*optional*) obtain data using APIs and web scraping
     - read HTML source code from a URL using the `rvest` package
     - read data from Twitter using the `rtweet` package
-    - compare downloading tabular data from a plain text file (e.g. `.csv`), accessing data from an API, and scraping the HTML source code a website
+    - compare downloading tabular data from a plain text file (e.g. `.csv`), accessing data from an API, and scraping the HTML source code from a website
 
 ## Absolute and relative file paths
 
@@ -854,7 +854,6 @@ data you are requesting and how frequently you are making requests.
 
 ## Additional resources
 - [Data import chapter](https://r4ds.had.co.nz/data-import.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
-
 
 
 
