minor edit - tt review
Co-authored-by: Tiffany A. Timbers <tiffany.timbers@gmail.com>

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -40,7 +40,7 @@ By the end of the chapter, students will be able to:
 
 - (*optional*) obtain data using APIs and web scraping
     - read HTML source code from a URL using the `rvest` package
-    - read data from Twitter using the `rtweet` package
+    - read data from the Twitter API using the `rtweet` package
     - compare downloading tabular data from a plain text file (e.g. `.csv`), accessing data from an API, and scraping the HTML source code from a website
 
 ## Absolute and relative file paths
@@ -854,6 +854,5 @@ data you are requesting and how frequently you are making requests.
 
 ## Additional resources
 - [Data import chapter](https://r4ds.had.co.nz/data-import.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
-
 
 
