url defn in learning objectives
Co-authored-by: Tiffany A. Timbers <tiffany.timbers@gmail.com>

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -17,7 +17,7 @@ By the end of the chapter, students will be able to:
 - define the following:
     - absolute file path
     - relative file path
-    - URL
+    - **u**niform **r**esource **l**ocator (URL)
 - read data into R using a relative path and a URL
 - compare and contrast the following functions:
     - `read_csv` 
@@ -854,5 +854,4 @@ data you are requesting and how frequently you are making requests.
 
 ## Additional resources
 - [Data import chapter](https://r4ds.had.co.nz/data-import.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
-
 
