url defn first time used
Co-authored-by: Tiffany A. Timbers <tiffany.timbers@gmail.com>

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -204,7 +204,7 @@ canlang_data
 Data frames in R need to have column names, thus if you read data into R as a data frame without column names then R assigns column names for them. If you used the `read_*` functions to read the data into R, then R gives each column a name of X1, X2, ..., XN, where N is the number of columns in the data set.
 
 ### Reading tabular data directly from a URL
-We can also use `read_csv()` or `read_delim()` (and related functions) to read in tabular data directly from a URL that contains tabular data. In this case, we provide the URL to `read_csv()` as the path to the file instead of a path to a local file on our computer. Similar to when we specify a path on our local computer, here we need to surround the URL by quotes. All other arguments that we use are the same as when using these functions with a local file on our computer.
+We can also use `read_csv()` or `read_delim()` (and related functions) to read in tabular data directly from a **u**niform **r**esource **l**ocator (URL) that contains tabular data. In this case, we provide the URL to `read_csv()` as the path to the file instead of a path to a local file on our computer. Similar to when we specify a path on our local computer, here we need to surround the URL by quotes. All other arguments that we use are the same as when using these functions with a local file on our computer.
 
 ```{r}
 canlang_data <- read_csv("https://raw.githubusercontent.com/UBC-DSCI/introduction-to-datascience/master/data/can_lang.csv")
@@ -854,4 +854,3 @@ data you are requesting and how frequently you are making requests.
 
 ## Additional resources
 - [Data import chapter](https://r4ds.had.co.nz/data-import.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
-
