api defn in objectives
Co-authored-by: Tiffany A. Timbers <tiffany.timbers@gmail.com>

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -38,7 +38,7 @@ By the end of the chapter, students will be able to:
 - retrieve data from a database query and bring it into R using the `collect` function from the `dbplyr` package
 - use `write_csv` to save a data frame to a `.csv` file
 
-- (*optional*) obtain data using APIs and web scraping
+- (*optional*) obtain data using **a**pplication **p**rogramming **i**nterfaces (APIs) and web scraping
     - read HTML source code from a URL using the `rvest` package
     - read data from the Twitter API using the `rtweet` package
     - compare downloading tabular data from a plain text file (e.g. `.csv`), accessing data from an API, and scraping the HTML source code from a website
