more motivation for scraping/api
Co-authored-by: Tiffany A. Timbers <tiffany.timbers@gmail.com>

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -511,9 +511,10 @@ write_csv(no_official_lang_data, "data/no_official_languages.csv")
 
 Data doesn't just magically appear on your computer; you need to get 
 it from somewhere. Earlier in the chapter we showed you how to access data
+stored in a plaintext, spreadsheet-like format (e.g., comma- or tab-separated)
 from a web URL using one of the `read_*` functions from the `tidyverse`. But 
 as time goes on, it is increasingly uncommon to find
-data (especially large amounts of data) just plainly available for download
+data (especially large amounts of data) in this format available for download
 from a URL. Instead, websites now often offer something known as an **a**pplication
 **p**rogramming **i**nterface (API), which provides a programmatic way to ask
 for subsets of a dataset. This allows the website owner to control *who* has access
