--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -776,7 +776,7 @@ along with the examples that we show here. To get started, load the `rtweet` pac
 library(rtweet)
 ```
 This package provides an extensive set of functions to search Twitter for tweets, users, their friends, and more. 
-Let's construct a small dataset of the last 400 tweets from the Tidyverse account. A few of the most recent tweets
+Let's construct a small dataset of the last 400 tweets and retweets from the Tidyverse account. A few of the most recent tweets
 are shown below.
 
 
