added css defn before first usage

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -531,7 +531,8 @@ directly from what a website displays is called *web scraping* (or sometimes *sc
 of course, copying and pasting information manually is a painstaking and error-prone process, especially when there is a lot of
 information to gather. So instead of asking your browser to translate the information that the
 web server provides into something you can see, you can collect
-that data programmatically---in the form of **h**yper**t**ext **m**arkup **l**anguage (HTML) code---and
+that data programmatically---in the form of **h**yper**t**ext **m**arkup **l**anguage (HTML) 
+and **c**ascading **s**tyle **s**heet (CSS) code---and
 process it to extract useful information.
 
 This subsection will show you the basics of both web scraping
