better css selector list formatting

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -693,9 +693,12 @@ contains city names and populations from the 2016 Canadian Census:
 
 <iframe width="840" height="473" src="https://www.youtube.com/embed/O9HKbdhqYzk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-We find that we should use the following CSS selector list:
+We find that we should use the following list of CSS selectors:
 ```
-"td:nth-child(5) , td:nth-child(7) , .infobox:nth-child(122) td:nth-child(1) , .infobox td:nth-child(3)"
+td:nth-child(5), 
+td:nth-child(7), 
+.infobox:nth-child(122) td:nth-child(1), 
+.infobox td:nth-child(3)
 ```
 
 **Using `rvest`**
