split html snippet across lines

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -729,7 +729,9 @@ A *node* is an HTML tag pair combined with the content stored between the tags. 
 CSS selector `td:nth-child(5)`, an example node that would be selected would
 be: 
 ```html
-<td style="text-align:left;background:#f0f0f0;"><a href="/wiki/London,_Ontario" title="London, Ontario">London</a></td>
+<td style="text-align:left;background:#f0f0f0;">
+<a href="/wiki/London,_Ontario" title="London, Ontario">London</a>
+</td>
 ```
 
 We store the result of the `html_nodes` function in the `population_nodes` variable.
