fixed long line of code with explanation

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -735,8 +735,17 @@ be:
 ```
 
 We store the result of the `html_nodes` function in the `population_nodes` variable.
+Note that below we use the `paste` function with a comma separator (`sep=","`)
+to build the list of selectors while maintaining code readability; this avoids
+having one very long line of code with the string
+`"td:nth-child(5),td:nth-child(7),.infobox:nth-child(122) td:nth-child(1),.infobox td:nth-child(3)"`
+as the second argument of `html_nodes`:
 ```{r 01-select-nodes}
-population_nodes <- html_nodes(page, "td:nth-child(5) , td:nth-child(7) , .infobox:nth-child(122) td:nth-child(1) , .infobox td:nth-child(3)")
+selectors <- paste("td:nth-child(5)",
+             "td:nth-child(7)",
+             ".infobox:nth-child(122) td:nth-child(1)",
+             ".infobox td:nth-child(3)", sep=",")
+population_nodes <- html_nodes(page, selectors)
 head(population_nodes)
 ```
 
