twitter friends -> followers
Co-authored-by: Tiffany A. Timbers <tiffany.timbers@gmail.com>

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -790,7 +790,7 @@ along with the examples that we show here. To get started, load the `rtweet` pac
 ```r
 library(rtweet)
 ```
-This package provides an extensive set of functions to search Twitter for tweets, users, their friends, and more. 
+This package provides an extensive set of functions to search Twitter for tweets, users, their followers, and more. 
 Let's construct a small dataset of the last 400 tweets and retweets from the Tidyverse account. A few of the most recent tweets
 are shown below.
 
