Removed friends twitter

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -831,7 +831,7 @@ When `rtweet` talks to the Twitter API, it uses your account information to auth
 Twitter then can keep track of how much data you're asking for, and how frequently you're asking.
 If you want to follow along with this example using your own Twitter account, you should read
 over the list of permissions you are granting `rtweet` *very carefully* and make sure you are comfortable
-with it. Note that `rtweet` can be used to manage most aspects of your account (make posts, add friends, etc.),
+with it. Note that `rtweet` can be used to manage most aspects of your account (make posts, follow others, etc.),
 which is why `rtweet` asks for such extensive permissions.
 If you decide to allow `rtweet` to talk to the Twitter API using your account information, then 
 input your username and password and hit "Sign In." Twitter will probably send you an email to say
