rt to better name
Co-authored-by: Tiffany A. Timbers <tiffany.timbers@gmail.com>

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -845,8 +845,8 @@ the one-time code they send you and provide that to the `rtweet` login page too.
 With the authentication setup out of the way, let's run the `get_timelines` function again to actually access
 the API and take a look at what was returned:
 ```r
-rt <- get_timelines('tidyverse', n=400)
-rt
+tidyverse_tweets <- get_timelines('tidyverse', n=400)
+tidyverse_tweets
 ```
 ```{r 01-reading-hidden-load-tweets, echo = FALSE, message = FALSE, warning = FALSE}
 rt <- read_csv("data/tweets.csv")
