reorder data cols api
Co-authored-by: Tiffany A. Timbers <tiffany.timbers@gmail.com>

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -852,7 +852,7 @@ tidyverse_tweets
 rt <- read_csv("data/tweets.csv")
 rt
 ```
-The data has quite a few variables! Let's reduce this down to a few variables of interest: `created_at`, `text`, `is_retweet`, and `retweet_screen_name`.
+The data has quite a few variables! Let's reduce this down to a few variables of interest: `created_at`,  `retweet_screen_name`, `is_retweet`, and `text`,.
 ```{r 01-select-tweets, message = FALSE, warning = FALSE}
 rt <- rt %>% select(created_at, text, is_retweet, retweet_screen_name)
 rt
