reorder data cols and rename rt to tidytweets
Co-authored-by: Tiffany A. Timbers <tiffany.timbers@gmail.com>

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -854,8 +854,9 @@ rt
 ```
 The data has quite a few variables! Let's reduce this down to a few variables of interest: `created_at`,  `retweet_screen_name`, `is_retweet`, and `text`,.
 ```{r 01-select-tweets, message = FALSE, warning = FALSE}
-rt <- rt %>% select(created_at, text, is_retweet, retweet_screen_name)
-rt
+tidyverse_tweets <- tidyverse_tweets %>% select(created_at, retweet_screen_name, 
+                                                is_retweet, text)
+tidyverse_tweets
 ```
 If you look back up at the image of the Tidyverse twitter page, you will
 recognize the text of the most recent few tweets in the above dataframe.  In
