rt to tidytwetts
Co-authored-by: Tiffany A. Timbers <tiffany.timbers@gmail.com>

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -861,7 +861,7 @@ tidyverse_tweets
 If you look back up at the image of the Tidyverse twitter page, you will
 recognize the text of the most recent few tweets in the above dataframe.  In
 other words, we have successfully created a small dataset using the Twitter
-API---neat! From this point onward, the `rt` dataframe is stored on your
+API---neat! From this point onward, the `tidyverse_tweets` dataframe is stored on your
 machine, and you can play with it to your heart's content; you can use
 `write_csv` to save it to a file, `read_csv` to read it into R again later, and
 so on. If you decide that you want to ask the Twitter API for more data 
