rt to tidyversetweets

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -849,8 +849,8 @@ tidyverse_tweets <- get_timelines('tidyverse', n=400)
 tidyverse_tweets
 ```
 ```{r 01-reading-hidden-load-tweets, echo = FALSE, message = FALSE, warning = FALSE}
-rt <- read_csv("data/tweets.csv")
-rt
+tidyverse_tweets <- read_csv("data/tweets.csv")
+tidyverse_tweets
 ```
 The data has quite a few variables! Let's reduce this down to a few variables of interest: `created_at`,  `retweet_screen_name`, `is_retweet`, and `text`,.
 ```{r 01-select-tweets, message = FALSE, warning = FALSE}
