added more notes about data from api

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -804,7 +804,7 @@ knitr::include_graphics("img/tidyverse_twitter.png")
 When you access an API, you are initiating a transfer of data from a web server
 to your computer. Web servers are expensive to run and do not have infinite resources.
 If you try to ask for *too much data* at once, you can use up a huge amount of the server's bandwidth. 
-If you try to ask for data *too frequently*---e.g. if you 
+If you try to ask for data *too frequently*---e.g., if you 
 make many requests to the server in quick succession---you can also bog the server down and make
 it unable to talk to anyone else. Most servers have mechanisms to revoke your access if you are not
 careful, but you should try to prevent issues from happening in the first place by being extra careful
@@ -861,10 +861,16 @@ tidyverse_tweets
 If you look back up at the image of the Tidyverse twitter page, you will
 recognize the text of the most recent few tweets in the above dataframe.  In
 other words, we have successfully created a small dataset using the Twitter
-API---neat! From this point onward, the `tidyverse_tweets` dataframe is stored on your
-machine, and you can play with it to your heart's content; you can use
-`write_csv` to save it to a file, `read_csv` to read it into R again later, and
-so on. If you decide that you want to ask the Twitter API for more data 
+API---neat! This data is also quite different from what we obtained from web scraping;
+it is already well-organized into a `tidyverse` dataframe (although not *every* API
+will provide data in such a nice format).
+ From this point onward, the `tidyverse_tweets` dataframe is stored on your
+machine, and you can play with it to your heart's content. For example, you can use
+`write_csv` to save it to a file and `read_csv` to read it into R again later; 
+and after reading the next few chapters you will have the skills to
+compute the percentage of retweets versus tweets, find the most oft-retweeted
+account, make visualizations of the data, and much more! If you decide that you want 
+to ask the Twitter API for more data 
 (see [the `rtweet` page](https://github.com/ropensci/rtweet)
 for more examples of what is possible), just be mindful as usual about how much
 data you are requesting and how frequently you are making requests. 
