rt to tidyversetweets

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -817,7 +817,7 @@ we should abide by when using the API.
 After checking the website, it seems like asking for 400 tweets one time is acceptable.
 So we can use the `get_timelines` function to ask for the last 400 tweets from the Tidyverse account.
 ```r
-rt <- get_timelines('tidyverse', n=400)
+tidyverse_tweets <- get_timelines('tidyverse', n=400)
 ```
 
 When you call the `get_timelines` for the first time (or any other `rtweet` function that accesses the API), 
