--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -814,6 +814,8 @@ Be careful not to overrun your quota! In this example, we should take a look at
  [the Twitter website](https://developer.twitter.com/en/docs/twitter-api/rate-limits) to see what limits
 we should abide by when using the API. 
 
+**Using `rtweet`**
+
 After checking the website, it seems like asking for 400 tweets one time is acceptable.
 So we can use the `get_timelines` function to ask for the last 400 tweets from the Tidyverse account.
 ```r
