--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -523,7 +523,8 @@ Typically, the website owner will give you a *token* (a secret string
 of characters somewhat like a password) that you have to provide when accessing the API.
 
 Another interesting thought: websites themselves *are* data! When you type a URL
-into your browser window, your browser asks the web server to give it some data, 
+into your browser window, your browser asks the *web server* (another computer on the internet whose
+job it is to respond to requests for the website) to give it the website's data, 
 and then your browser translates that data into something you can see. If the website
 shows you some information that you're interested in, you could *create* a data set for yourself
 by copying and pasting that information into a file. This process of taking information
