wip moving selectorgadget tutorial to end of reading chp

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -650,8 +650,9 @@ source code. Fortunately there are tools available to make this process
 easier. For example, 
 [SelectorGadget from the Chrome Web Store](https://chrome.google.com/webstore/detail/SelectorGadget/mhjhnkcfbdhnjickkkdbjoemdmbfginb) is 
 an open source tool that simplifies identifying the generating and finding CSS selectors. 
-Here is a short video on how to install and use the SelectorGadget tool to get
-a CSS selector for use in web scraping:
+At the end of the chapter in the additional resources section, we include a link to
+a short video on how to install and use the SelectorGadget tool to 
+obtain CSS selectors for use in web scraping. 
 
 <iframe width="840" height="473" src="https://www.youtube.com/embed/YdIWI6K64zo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -880,3 +881,5 @@ data you are requesting and how frequently you are making requests.
 
 ## Additional resources
 - [Data import chapter](https://r4ds.had.co.nz/data-import.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
+- [A brief video tutorial](https://www.youtube.com/embed/YdIWI6K64zo) on using the SelectorGadget tool to obtain desired CSS selectors for extracting data from a website via web scraping
+
