image only selectorgadget example

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -653,13 +653,30 @@ an open source tool that simplifies identifying the generating and finding CSS s
 At the end of the chapter in the additional resources section, we include a link to
 a short video on how to install and use the SelectorGadget tool to 
 obtain CSS selectors for use in web scraping. 
+After installing and enabling the tool, you can simply click the 
+website element for which you want an appropriate selector. For 
+example, if we click the price of an apartment listing, we
+find that SelectorGadget shows us the selector `.result-price`
+in its toolbar, and highlights all the other apartment
+prices that would be obtained using that selector.
 
-<iframe width="840" height="473" src="https://www.youtube.com/embed/YdIWI6K64zo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+![](img/sg1.png)
 
-After installing and using SelectorGadget as shown in the video, we
-obtain the two CSS selectors `.housing` and `.result-price`; we can use
-these to 
-scrape information about the square footage and the rental price, respectively.
+If we then click the size of an apartment listing, SelectorGadget shows us
+the `span` selector, and highlights much of the page; this indicates that the
+`span` selector is not specific enough to just capture apartment sizes. 
+
+![](img/sg3.png)
+
+To narrow the selector, we can click one of the highlighted elements that
+we *do not* want. For example, we can deselect the "pic/map" links, 
+resulting in only the data we want highlighted using the `.housing` selector.
+
+![](img/sg2.png)
+
+So to scrape information about the square footage and rental price
+of apartment listings, we need to use
+the two CSS selectors `.housing` and `.result-price`, respectively.
 The selector gadget returns them to us as a comma separated list (here
 `.housing , .result-price`), which is exactly the format we need to provide to
 R if we are using more than one CSS selector.
