moved another video to additional resources

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -705,14 +705,16 @@ to find data about rental prices in Vancouver, we must go elsewhere.
 To continue learning how to scrape data from the web, let's instead
 scrape data on the population of Canadian cities from Wikipedia.
 We have checked the [Terms of Service document](https://foundation.wikimedia.org/wiki/Terms_of_Use/en),
-and it does not mention that web scraping is disallowed. In the video below, 
-we demonstrate how to use the SelectorGadget tool to get CSS Selectors 
-from [Wikipedia's Canada](https://en.wikipedia.org/wiki/Canada) for a table that
-contains city names and populations from the 2016 Canadian Census: 
+and it does not mention that web scraping is disallowed. 
+We will use the SelectorGadget tool to pick elements that we are interested in
+(city names and population counts) and deselect others to indicate that we are not 
+interested in them (province names), as shown in the screenshot  below.
 
-<iframe width="840" height="473" src="https://www.youtube.com/embed/O9HKbdhqYzk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+![](img/sg4.png)
 
-We find that we should use the following list of CSS selectors:
+We include a link to a short video tutorial on this process at the end of the chapter
+in the additional resources section. SelectorGadget provides in its toolbar
+the following list of CSS selectors to use:
 ```
 td:nth-child(5), 
 td:nth-child(7), 
@@ -898,5 +900,6 @@ data you are requesting and how frequently you are making requests.
 
 ## Additional resources
 - [Data import chapter](https://r4ds.had.co.nz/data-import.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
-- [A brief video tutorial](https://www.youtube.com/embed/YdIWI6K64zo) on using the SelectorGadget tool to obtain desired CSS selectors for extracting data from a website via web scraping
+- [A brief video tutorial](https://www.youtube.com/embed/YdIWI6K64zo) on using the SelectorGadget tool to obtain desired CSS selectors for extracting the price and size data for apartment listings on CraigsList
+- [Another brief video tutorial](https://www.youtube.com/embed/O9HKbdhqYzk) on using the SelectorGadget tool to obtain desired CSS selectors for extracting Canadian city names and 2016 census populations from Wikipedia
 
